aya-parser/src/parser/instructions/snapshots/aya_parser__parser__instructions__add__tests__add_lit_reg.snap
---
source: aya-parser/src/parser/instructions/add.rs
expression: result
---
Instruction(
    AddLitReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        HexLiteral(
            ByteOffset {
                start: 9,
                end: 13,
            },
        ),
    ),
)
