aya-parser/src/parser/instructions/snapshots/aya_parser__parser__instructions__add__tests__add_reg_reg.snap
---
source: aya-parser/src/parser/instructions/add.rs
expression: result
---
Instruction(
    AddRegReg(
        Register(
            ByteOffset {
                start: 4,
                end: 6,
            },
        ),
        Register(
            ByteOffset {
                start: 8,
                end: 10,
            },
        ),
    ),
)
